# nami-core

./: .coverage  .gitignore  CHANGELOG.md  README.md  ROADMAP.md  docker-compose.obs.yml  netlify.toml  pyproject.toml
.github/: pull_request_template.md
.netlify/: netlify.toml  state.json
config/: ai_chat_harness.yaml  analytics_harness.yaml  bot_harness.yaml  bridge_harness.yaml  clipboardbypao_harness.yaml  cron_harness.yaml  default_harness.yaml  email_harness.yaml  gateway_harness.yaml  gold_harness.yaml  graphify_harness.yaml  hanoi_stats_harness.yaml  image_harness.yaml  inference_policy.yaml  laopatana_lab_harness.yaml  lottery_harness.yaml  mcp_servers.example.yaml  miroshark_harness.yaml  miroshark_oracle_harness.yaml  multimodal_registry.yaml  notification_harness.yaml  open_design_harness.yaml  pipeline_harness.yaml  proxy_harness.yaml  relay_harness.yaml  scheduler_harness.yaml  search_harness.yaml  sentiment_harness.yaml  signal_harness.yaml  status_harness.yaml  trading_harness.yaml
deploy/: add_key_and_reboot.sh  authorized_keys_clean  check_latest_pred.py  check_v531.py  check_v531_items.py  cleanup_cron.py  create_release.py  cs-config.json  dashboard-deploy.sh  dashboard.html  deploy-lottery-v6-backtest.sh  fix_keys.py  fix_keys.sh  fix_keys_remote.sh  fix_vip_channel.py  gold_public_read_patch.sh  inject-narrow-net-rule.ts  inject-v531-rule.ts  install.sh  locustfile.py  migrate-vps.sh  msi_ssh_key.txt  nami-api-nginx.conf  nami-core.service  nami-design-system.md  nginx-nami-api.conf  nginx-nami-landing.conf  od-create-project.json  od-daemon.service  od-nginx.conf  patch_hanoi_bot.py  patch_nami_bot.py  patch_nami_bot_dispatch.py  patch_nami_bot_v2.py  patch_nami_bot_v3.py  patch_utils.py  pre-deploy-check.sh  remote-deploy.sh  setup-domain.sh  setup-monitoring.sh  (+19 more)
docs/: async-queue.md  codex-handoff.md  deepseek-tui-adaptation-plan.md  examples.md  migration-guide.md  observability.md  phase-26.1-blockers.md  release-v0.13.0.md  release-v0.14.0.md
examples/: nami_core_full_demo.py  nami_core_pipeline.py
migrations/: 0001_jobs_table.sql  0002_jobs_trace_id_index.sql  0002_jobs_trace_id_index_down.sql  0003_agent_traces.sql  0003_agent_traces_down.sql  0004_mcp_calls.sql  0004_mcp_calls_down.sql  0005_pgvector_ext.sql  0005_pgvector_ext_down.sql  0006_memory_tables.sql  0006_memory_tables_down.sql  0007_pgvector_indexes.sql  0007_pgvector_indexes_down.sql
nami-dashboard/: ENV_SETUP.txt  package-lock.json  package.json
nami-evals/: runner.py
(+304 files in other folders)
