[project]
name = "nami-core"
version = "0.15.0"
description = "Unified agentic system: Hermes brain + Harness control layer + worker plugins."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Pao" }]
license = { text = "MIT" }
keywords = ["agentic", "harness", "hermes", "rails", "brakes", "sensors", "quality"]
dependencies = [
    "pyyaml>=6.0",
    "psycopg[binary]>=3.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "redis>=5.0",
    "tenacity>=8.2",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp-proto-http>=1.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.27",
    "pytest-asyncio>=0.23",
    "testcontainers>=4.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
